# watershed

./: CMakeLists.txt  README  main.cpp
include/: Dummy.hpp
input/: imagesList~
input/test_data_hw3_1/: 1.dcm
src/: Dummy.cpp  lodepng.cpp
